# fastAPI_

./: .coverage  .env-example  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fastapi_zero/: app.py  models.py  schemas.py  security.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: 03763d2874b1_create_table_users.py  0d272224fd32_create_todos_table.py  2ad644203ffd_adicionando_created_at_e_updated_at_na_.py  9cba35c242f2_include_updated_at_field_on_users_table.py  b6e25a6601ff_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todos.py
tests/routers/: test_auth.py  test_users.py
